2004-07-26  James Henstridge  <james@jamesh.id.au>

	* jhbuild/moduleset.py (_parse_module_set): put Subversion roots
	and CVS roots in the same namespace as far as lookups go.  Fixes
	problems building Mozilla.  Fixes bug #148338.

2004-07-22  Keith Packard  <keithp@keithp.com>

	* modulesets/freedesktop.modules: add Xpm to Xaw dependency set

2004-07-22  Crispin Flowerday  <gnome@flowerday.cx>

	* modulesets/gnome26.modules: Use gnome-2-6 branch for eel

2004-07-22  JP Rosevear  <jpr@novell.com>

	* modulesets/bootstrap.modules: fix python directory for 2.3.4

2004-07-22  Xavier Ordoquy  <xordoquy@linovia.com>

	* modulesets/freedesktop.modules:
	Typo: XExt should be Xext in Xtst module.

Wed Jul 21 22:24:38 2004  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/freedesktop.modules: add desktop-file-utils
	dependency.

2004-07-20  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome28.modules: Add gnome-keyring-manager

2004-07-20  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome26.modules: 
	* modulesets/gnome28.modules (gnome-system-tools): fix
	dependencies.  Patch from  Jaap A. Haitsma <jaap@haitsma.org> in
	bug #147816.

	* jhbuild/utils/svn.py (SVNRoot.update): add support for switching
	a working copy to a different URI if it isn't pointing at the
	right place.

2004-07-20  James Henstridge  <james@jamesh.id.au>

	Based on patch from Christian Hammond <chipx86@gnupdate.org> in
	bug #145159.

	* modulesets/moduleset.dtd, modulesets/moduleset.rnc: add handling
	of extra elements to schemas.

	* jhbuild/modtypes/svnmodule.py: code for handling builds of
	Subversion hosted modules.

	* jhbuild/config.py (_known_keys): grab svnroots from config file.

	* jhbuild/utils/svn.py: utility functions for subversion
	manipulating working copies.

	* jhbuild/moduleset.py (_parse_module_set): parse svnroot
	elements.

2004-07-20  James Henstridge  <james@jamesh.id.au>

	* modulesets/freedesktop.modules: some changes from Daniel minus