@@ -1,3 +1,13 @@
+2004-07-29  James Henstridge  <james@jamesh.id.au>
+
+	* jhbuild/commands/info.py (do_info): show information about
+	Subversion modules.
+
+	* jhbuild/modtypes/svnmodule.py (SVNModule.__init__): If no
+	checkout dir is given, set module name to the basename of
+	svnmodule rather than svnmodule.
+	(parse_svnmodule): there is no revision.
+
 2004-07-26  James Henstridge  <james@jamesh.id.au>
 
 	* jhbuild/moduleset.py (_parse_module_set): put Subversion roots
